app/myapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      imagePullSecrets:
        - name: myregistrykey
      containers:
        - name: myapp
          image: exztinct01/myapp:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
# ---
# # External Service
# apiVersion: v1
# kind: Service
# metadata:
#   name: myapp-service
#   namespace: myapp
# spec:
#   selector:
#     app: myapp
#   type: LoadBalancer
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 8080
#       nodePort: 30000
---
# Internal Service
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: myapp
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
# ---
# # Linode Node Balancer Service
# apiVersion: v1
# kind: Service
# metadata:
#   name: myapp-service
#   namespace: myapp
#   annotations:
#     service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
# spec:
#   selector:
#     app: myapp
#   type: LoadBalancer
#   ports:
#     - name: http
#       protocol: TCP
#       port: 8080
#       targetPort: 8080
#   sessionAffinity: None
